syntax = "proto3";

package dachrag;

// DAC-HRAG peer-to-peer communication protocol

// --- Services ---

service DacHragPeer {
    // Query routing
    rpc Query(QueryRequest) returns (QueryResponse);
    
    // Peer registration
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    
    // Hierarchy sync
    rpc GetHierarchy(GetHierarchyRequest) returns (GetHierarchyResponse);
    rpc SyncCommunities(SyncCommunitiesRequest) returns (SyncCommunitiesResponse);
}

// --- Query Messages ---

message QueryRequest {
    string query_id = 1;
    repeated float embedding = 2;
    repeated string topic_hints = 3;
    float similarity_threshold = 4;
    int32 top_k = 5;
    int32 hop_count = 6;
    int32 ttl = 7;
}

message QueryResponse {
    string query_id = 1;
    repeated SearchResult results = 2;
    repeated string routing_path = 3;
    map<string, float> latency_ms = 4;
    bool success = 5;
    string error = 6;
}

message SearchResult {
    string chunk_id = 1;
    string text = 2;
    float score = 3;
    string source = 4;
    string peer_id = 5;
    bytes metadata = 6;  // msgpack-encoded
}

// --- Registration Messages ---

message RegisterRequest {
    string peer_id = 1;
    string address = 2;
    int32 port = 3;
    repeated string communities = 4;
    bool is_super_peer = 5;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    repeated PeerInfo peers = 3;  // Other known peers
}

message HeartbeatRequest {
    string peer_id = 1;
}

message HeartbeatResponse {
    bool acknowledged = 1;
}

message PeerInfo {
    string peer_id = 1;
    string address = 2;
    int32 port = 3;
    repeated string communities = 4;
    bool is_super_peer = 5;
}

// --- Hierarchy Messages ---

message GetHierarchyRequest {
    int32 version = 1;  // 0 = get latest
}

message GetHierarchyResponse {
    int32 version = 1;
    repeated HierarchyLevel levels = 2;
}

message HierarchyLevel {
    int32 level = 1;
    repeated Community communities = 2;
}

message Community {
    string community_id = 1;
    int32 level = 2;
    string summary = 3;
    repeated float summary_embedding = 4;
    repeated string member_ids = 5;
    string parent_id = 6;
    repeated string children_ids = 7;
    string peer_id = 8;
}

message SyncCommunitiesRequest {
    string peer_id = 1;
    repeated Community communities = 2;
}

message SyncCommunitiesResponse {
    bool success = 1;
    int32 synced_count = 2;
}
